--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "momoco",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
-  "productName": "momoco",
+  "productName": "みちくさびゅあー",
   "author": "iranika <7370486+iranika@users.noreply.github.com>",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "deploy": "gh-pages -d dist/pwa",
+    "bd": "quasar build -m pwa && yarn deploy"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -27,7 +29,7 @@
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.0.0",
-    "workbox-webpack-plugin": "^6.0.0",
+    "workbox-webpack-plugin": "^6.4.0",
     "gh-pages": "^3.1.0"
   },
   "browserslist": [
