--- a/quasar.extensions.json
+++ b/quasar.extensions.json
@@ -17,5 +17,10 @@
       "scripts",
       "typescript"
     ]
+  },
+  "ssg": {
+    "scripts": true,
+    "inlineCriticalCss": true,
+    "inlineCssFromSFC": false
   }
 }
