--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "serve:ssg": "quasar ssg serve dist/ssg"
   },
   "dependencies": {
-    "@quasar/extras": "^1.14.0",
+    "@jest/globals": "^29.5.0",
+    "@quasar/cli": "^2.2.1",
+    "@quasar/extras": "^1.16.4",
     "@vue/test-utils": "^2.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "quasar": "^2.7.1",
+    "quasar": "^2.12.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.0.0",
     "vue-property-decorator": "^9.1.2",
@@ -39,10 +41,10 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
-    "@quasar/app-webpack": "^3.5.3",
-    "@quasar/quasar-app-extension-testing": "^2.0.4",
-    "@quasar/quasar-app-extension-testing-e2e-cypress": "^4.1.2",
-    "@quasar/quasar-app-extension-testing-unit-jest": "^3.0.0-alpha.10",
+    "@quasar/app-webpack": "^3.9.2",
+    "@quasar/quasar-app-extension-testing": "^2.1.0",
+    "@quasar/quasar-app-extension-testing-e2e-cypress": "^4.2.2",
+    "@quasar/quasar-app-extension-testing-unit-jest": "^3.0.0-beta.5",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
