fix: 声優さん情報の更新

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
     "start": "quasar dev",
     "deploy": "gh-pages -d dist/pwa",
+    "dev": "quasar dev",
     "bd": "quasar build -m pwa && yarn deploy",
     "test:unit": "jest --updateSnapshot",
     "test:unit:ci": "jest --ci",
@@ -43,7 +44,6 @@
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app-webpack": "^3.9.2",
     "@quasar/quasar-app-extension-testing": "^2.1.0",
-    "@quasar/quasar-app-extension-testing-e2e-cypress": "^4.2.2",
     "@quasar/quasar-app-extension-testing-unit-jest": "^3.0.0-beta.5",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
